--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Thakur-Sanskar-Anhal.github.io/react-first",
+  "homepage": "https://Thakur-Sanskar-Anhal.github.io/tinker-text",
   "name": "react-first",
   "version": "0.1.0",
   "private": true,
